fixes problem with images being too small to read

--- a/src/css/block/content.css
+++ b/src/css/block/content.css
@@ -80,7 +80,7 @@
   }
 
   &__body-text {
-    max-width: 40.5rem;
+    max-width: 60.5rem;
     padding-left: 6rem;
 
     /*
